fix(sidebar): subtitle text overflow (#3758)

--- a/components/views/user/User.less
+++ b/components/views/user/User.less
@@ -36,17 +36,13 @@
     }
 
     .subtitle {
-      height: 30px;
-      display: inline-block;
-      min-width: 0;
-      font-size: @micro-text-size;
-      line-height: 1.4;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      height: @mini-text-size * 1.2 * 2;
+      line-height: 1.2;
       font-size: @mini-text-size;
       color: @text-muted;
       font-family: @secondary-font;
       pointer-events: none;
+      .multiline-ellipsis(2);
     }
 
     flex: 1;
